; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/utils/extr_random_utils.c_VP8InitRandom.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/utils/extr_random_utils.c_VP8InitRandom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64, i32 }

@kRandomTable = common dso_local global i32 0, align 4
@VP8_RANDOM_DITHER_FIX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VP8InitRandom(%struct.TYPE_3__* %0, float %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca float, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store float %1, float* %4, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @kRandomTable, align 4
  %9 = call i32 @memcpy(i32 %7, i32 %8, i32 4)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store i32 31, i32* %13, align 8
  %14 = load float, float* %4, align 4
  %15 = fpext float %14 to double
  %16 = fcmp olt double %15, 0.000000e+00
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  br label %34

18:                                               ; preds = %2
  %19 = load float, float* %4, align 4
  %20 = fpext float %19 to double
  %21 = fcmp ogt double %20, 1.000000e+00
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i32, i32* @VP8_RANDOM_DITHER_FIX, align 4
  %24 = shl i32 1, %23
  br label %32

25:                                               ; preds = %18
  %26 = load i32, i32* @VP8_RANDOM_DITHER_FIX, align 4
  %27 = shl i32 1, %26
  %28 = sitofp i32 %27 to float
  %29 = load float, float* %4, align 4
  %30 = fmul float %28, %29
  %31 = fptosi float %30 to i32
  br label %32

32:                                               ; preds = %25, %22
  %33 = phi i32 [ %24, %22 ], [ %31, %25 ]
  br label %34

34:                                               ; preds = %32, %17
  %35 = phi i32 [ 0, %17 ], [ %33, %32 ]
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  ret void
}

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
